// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editServerEpic actions snapshot on failed response 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "editServer/FORM_SUBMITTED",
    "values": Object {
      "name": "name",
      "port": 3000,
    },
  },
  Object {
    "reason": "error message",
    "type": "editServer/FAILED",
  },
]
`;

exports[`editServerEpic actions snapshot on success response 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "editServer/FORM_SUBMITTED",
    "values": Object {
      "name": "name",
      "port": 3000,
    },
  },
  Object {
    "result": Object {
      "id": "some id",
      "name": "name",
      "port": 3000,
    },
    "type": "editServer/SUCCEEDED",
  },
]
`;
